# School-Activities

./: .gitignore  ANI.csproj  ANI.db  ANI.db-shm  ANI.db-wal  ANI.http  ANI.sln  Algorithm.cs  AliacSearchAlgo.sln  Backpropagation Neural Networks.csproj  Backpropagation Neural Networks.sln  CITLIBFilters.cs  CSIT201.html  DIP Activity.csproj  DIP Coins Activity.csproj  Device.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Forum.html  Program.cs  README.md  Scripts.js  Scripts2.js  Styles.css  Styles2.css  UpgradeLog.htm  WeatherForecast.cs  admin.php  appsettings.json  basicDIPlib ver 1.cs  connect.php  connectLogin.php  employer.php  index.php  login.php  myJquery.html  pom.xml  posts.txt  register.php  (+2 more)
AliacSearchAlgo/: AliacSearchAlgo.csproj
BST - from pre-order/: Instructions  bst.h  main.cpp  mybinarytree.h
BST - insert and search/: Instructions  bst.h  main.cpp  mybinarytree.h  node.h
BST - predecessorSuccessor/: binarytree.h  bst.h  main.cpp
BST - remove/: Instructions  bst.h  mybinarytree.h
Backup/AliacSearchAlgo/: Fringe.cs
Binary Tree - Expression Tree/: main.cpp
CS345/Backpropagation Neural Networks/: Form1.Designer.cs  Form1.cs  Program.cs
CS345/DIP Coins Activity/: DIP Coins Activity.sln  Form1.Designer.cs  Form1.resx  Program.cs
CS345/Digital Image Processing/: Algorithm.cs  CITLIBFilters.cs  DIP Activity.sln  Device.cs  DeviceManager.cs  Form1.cs  Program.cs
CS345/Uninformed Search Algorithm/: README.md  (+1 more)
CSIT226/: employee.php  employer.php  index.php  login.php  mainPage.php  register.php
CSIT321/: ANI.csproj  Program.cs
Controllers/: OrdersController.cs  ProductsController.cs  RatingsController.cs  UsersController.cs  WeatherForecastController.cs
DAA/: CMakeLists.txt
DAA/2-4 Trees/: Node.cpp  Node.h  Tree24.cpp  Tree24.h  main.cpp
DAA/AVL Trees/: CMakeLists.txt
DAA/AVL Trees/AVL Trees - 01 Rotate (zigleft_zigright)/: binarytree.h  bst.h  main.cpp  mybinarytree.h  node.h
DAA/AVL Trees/AVL Trees - 02 Restructure/: binarytree.h  bst.h  main.cpp  mybinarytree.h  node.h
DAA/AVL Trees/AVL Trees - 03 Insert-Delete/: binarytree.h  bst.h  main.cpp  mybinarytree.h  node.h
DAA/Final Examinations [LATE]/: CMakeLists.txt
DAA/Final Examinations [LATE]/Graphs - Adjacency List/: graphlist.h  main.cpp  vertex.h
DAA/Final Examinations [LATE]/Merge Sort/: linkedlist.h  list.h  main.cpp
DAA/Final Examinations [LATE]/PolyHash Quadratic/: hashtable.h  main.cpp
DAA/Final Examinations [LATE]/Quick Sort/: main.cpp
DAA/Final Examinations [LATE]/Red-Black Trees Part 2_1/: main.cpp  node.h  tree.h
DAA/Final Examinations [LATE]/Shortest Path/: graph.h  graphmatrix.h  main.cpp
DAA/Final Examinations [LATE]/Sorting on Lists/: arraylist.h  linkedlist.h  list.h  main.cpp
DAA/Final Examinations [LATE]/Splay Trees/: node.h  tree.h
DAA/LA on Graphs/: CMakeLists.txt  graph.h
DAA/LA on Graphs [PRACTICE]/: CMakeLists.txt
DAA/LA on Graphs [PRACTICE]/Graphs - Adjacency Matrix/: graphmatrix.h
DAA/LA1 - List ADT/: CMakeLists.txt
DAA/LA1 - List ADT/Array List (Dynamic)/: arraylist.h  list.h  main.cpp
DAA/LA1 - List ADT/Linked List (Doubly)/: linkedlist.h  main.cpp  node.h
DAA/LA2 - Hash Tables/: hashtable.h  main.cpp
DAA/RedBlack/: CMakeLists.txt  Node.h  RedBlack.cpp  RedBlack.h  main.cpp
DTO/: LoginResponseDTO.cs  OrderDTO.cs  ProductDTO.cs  RatingDTO.cs  UserCreateDTO.cs  UserDTO.cs  UserLoginDTO.cs  UserResponseDTO.cs  UserSecDTO.cs  UserUpdateDTO.cs
First Output Creation/: index.html  styles.css
Forum/: CSIT201.html  Scripts2.js
General Trees/: gentree.h  main.cpp  mygentree.h  node.h
Libraries/: Library.cs
Mappings/: MappingProfile.cs
Max Heap - insert/: maxheap.h
Metro-Events-Client-Side/: Scripts2.js  functions.js
Metro-Events-Server-Side/: README.md  deleteReview.php  eventCanceled.php  getEvents.php  getNotificationReminder.php  register.php  updateUserType.php
Migrations/: 20241204171626_Init.Designer.cs  20241204171626_Init.cs  20241205102403_Init.Designer.cs  20241205102403_Init.cs  20241207115111_Init.Designer.cs  20241207115111_Init.cs  20241207122835_Init.Designer.cs  20241207122835_Init.cs  20241208141653_Init.Designer.cs  20241208141653_Init.cs  20241208174425_Init.Designer.cs  20241208174425_Init.cs  20241209061005_Init.Designer.cs  20241209061005_Init.cs  20241209135024_Init.Designer.cs  20241209135024_Init.cs  20241210053213_Init.Designer.cs  20241210053213_Init.cs  20241210110129_Init.Designer.cs  20241210110129_Init.cs  20241210143716_Init.Designer.cs  20241215132336_Add FinishedAt in Order.Designer.cs  AniContextModelSnapshot.cs
Min Heap - removeMin/: arrayheap.h
Models/: AniContext.cs  Order.cs  Product.cs  Rating.cs  User.cs
Postfix to Prefix Expressions/: arraylist.h  stack.h
Prefix Expressions/: list.h  main.cpp
Queue - Strings/: list.h  queue.h  singlyqueue.h
Repository/: IOrderRepository.cs  IProductRepository.cs  IRatingRepository.cs  IUserRepository.cs  OrderRepository.cs  ProductRepository.cs  RatingRepository.cs  UserRepository.cs
Server/: Client.java  ClientHandler.java  Request.java  Server.java  Test.java
Services/: IOrderService.cs  IProductService.cs  IRatingService.cs  ITokenService.cs  IUserService.cs  OrderService.cs  ProductService.cs  RatingService.cs  TokenService.cs  UserService.cs
Stack - Palindrome/: arraylist.h  main.cpp  stack.h
Views/: README.md  checkout.html  edit_product.html  farmer.html  home.html  index.html  login.html  product_detail.html  profile.html  register.html  sell_item.html  update_profile.html
app/: build.gradle
css/: styles.css
js/: RegisterScript.js  scripts.js
(+865 files in other folders)
